--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arvo">
 </head>
 
 <body>
@@ -24,6 +25,8 @@
   <footer>
     Made by Aditya Pandey
   </footer>
+
+  <script src ="index.js"></script>
 </body>
 
 </html>
